crates/parser/tests/snapshots/parser_test__trait_decl_with_superclass.snap
---
source: crates/parser/tests/parser_test.rs
expression: module
---
decls:
  - DefTrait:
      platform: ~
      visibility: Private
      name: Ord
      type_param:
        name: a
        arity: 0
        span:
          - 10
          - 11
      superclasses:
        - type_var: a
          trait_name: Eq
          span:
            - 19
            - 24
      methods:
        - platform: ~
          name: compare
          visibility: Private
          type_params: []
          params:
            - name: x
              ty:
                Var:
                  name: a
                  span:
                    - 42
                    - 43
              span:
                - 39
                - 43
            - name: y
              ty:
                Var:
                  name: a
                  span:
                    - 48
                    - 49
              span:
                - 45
                - 49
          constraints: []
          return_type:
            Named:
              name: Ordering
              span:
                - 54
                - 62
          body:
            Lit:
              value: Unit
              span:
                - 27
                - 62
          span:
            - 27
            - 62
      span:
        - 0
        - 64
