crates/parser/tests/snapshots/parser_test__type_record.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse_module(\"(type Point (record (x Int) (y Int)))\")"
---
decls:
  - DefType:
      name: Point
      visibility: Private
      type_params: []
      kind:
        Record:
          fields:
            - - x
              - Named:
                  name: Int
                  span:
                    - 23
                    - 26
            - - y
              - Named:
                  name: Int
                  span:
                    - 31
                    - 34
      deriving: []
      span:
        - 0
        - 37
