crates/parser/tests/snapshots/parser_test__type_sum.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse_module(\"(type Option [a] (| (Some a) None))\")"
---
decls:
  - DefType:
      name: Option
      visibility: Private
      type_params:
        - a
      kind:
        Sum:
          variants:
            - name: Some
              fields:
                - Var:
                    name: a
                    span:
                      - 26
                      - 27
              span:
                - 20
                - 28
            - name: None
              fields: []
              span:
                - 29
                - 33
      deriving: []
      span:
        - 0
        - 35
