crates/parser/tests/snapshots/parser_test__type_sum_deriving.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse_module(\"(type Option [a] (| (Some a) None) deriving [Eq Show])\")"
---
decls:
  - DefType:
      name: Option
      type_params:
        - a
      kind:
        Sum:
          variants:
            - name: Some
              fields:
                - Var:
                    name: a
                    span:
                      - 26
                      - 27
              span:
                - 20
                - 28
            - name: None
              fields: []
              span:
                - 29
                - 33
      deriving:
        - Eq
        - Show
      span:
        - 0
        - 54
