crates/parser/tests/snapshots/parser_test__var.snap
---
source: crates/parser/tests/parser_test.rs
expression: "parse(\"x\")"
---
Var:
  name: x
  span:
    - 0
    - 1
